@@ -8,7 +8,24 @@ template<typename T>
 class Result
 {
     public:
-        Result(const Result& result): _data(result._data), _failMessage(result._failMessage), _failCode(result._failCode)
+
+        Result(): _data(std::nullopt), _failMessage(std::nullopt), _failCode(std::nullopt)
+        {
+        }
+
+        Result(const T& data): _data(std::move(data)), _failMessage(std::nullopt), _failCode(std::nullopt)
+        {
+        }
+
+        Result(const std::string &failMessage): _failMessage(std::move(failMessage)), _failCode(std::nullopt)
+        {
+        }
+
+        Result(const std::string &failMessage, std::int32_t failCode): _failMessage(std::move(failMessage)), _failCode(failCode)
+        {
+        }
+
+        Result(const Result& result): _data(std::move(result._data)), _failMessage(std::move(result._failMessage)), _failCode(result._failCode)
         {
         }
 
@@ -56,16 +73,4 @@ class Result
         std::optional<T> _data;
         std::optional<std::string> _failMessage;
         std::optional<std::int32_t> _failCode;
-
-        Result(const T& data): _data(data), _failMessage(std::nullopt), _failCode(std::nullopt)
-        {
-        }
-
-        Result(const std::string &failMessage): _failMessage(failMessage), _failCode(std::nullopt)
-        {
-        }
-
-        Result(const std::string &failMessage, std::int32_t failCode): _failMessage(failMessage), _failCode(failCode)
-        {
-        }
 };
