@@ -25,32 +25,42 @@ public:
 
     const Result<Balance> registerTransaction(std::int32_t customerId, const Transaction &transaction) const
     {
-        auto dbTransaction = this->_balanceRepository.newTransaction();
-        auto currentBalanceOption = this->_balanceRepository.getByCustomerIdForUpdate(customerId, dbTransaction);
-
-        if (!currentBalanceOption.has_value())
+        bool hasSuccess = false;
+        Result<Balance> result;
+        do
         {
-            dbTransaction->rollback();
-            return Result<Balance>::fail("BALANCE_NOT_FOUND", TransactionErrors::BALANCE_NOT_FOUND);
-        }
-
-        auto currentBalance = currentBalanceOption.value();
-        auto transactionAmount = this->getTransactionAmountWithSign(transaction);
-        std::int32_t newBalance = (currentBalance.amount + transactionAmount);
-
-        if ((newBalance + currentBalance.limit) < 0)
-        {
-            dbTransaction->rollback();
-            return Result<Balance>::fail("INSUFFICIENT_FUNDS", TransactionErrors::INSUFFICIENT_FUNDS);
-        }
-
-        this->_balanceRepository.update(customerId, newBalance, dbTransaction).wait();
-        this->_transactionRepository.insert(customerId, transaction, dbTransaction).wait();
-        
-        currentBalance.amount = newBalance;
-
-        return Result<Balance>::success(currentBalance);
+            hasSuccess = this->tryRegisterTransaction(customerId, transaction, result);
+        } while (!hasSuccess);
+        return result;
     }
+
+    // const Result<Balance> registerTransaction(std::int32_t customerId, const Transaction &transaction) const
+    // {
+    //     auto currentBalanceOption = this->_balanceRepository.getByCustomerIdForUpdate(customerId, dbTransaction);
+
+    //     if (!currentBalanceOption.has_value())
+    //     {
+    //         dbTransaction->rollback();
+    //         return Result<Balance>::fail("BALANCE_NOT_FOUND", TransactionErrors::BALANCE_NOT_FOUND);
+    //     }
+
+    //     auto currentBalance = currentBalanceOption.value();
+    //     auto transactionAmount = this->getTransactionAmountWithSign(transaction);
+    //     std::int32_t newBalance = (currentBalance.amount + transactionAmount);
+
+    //     if ((newBalance + currentBalance.limit) < 0)
+    //     {
+    //         dbTransaction->rollback();
+    //         return Result<Balance>::fail("INSUFFICIENT_FUNDS", TransactionErrors::INSUFFICIENT_FUNDS);
+    //     }
+
+    //     this->_balanceRepository.update(customerId, newBalance, dbTransaction).wait();
+    //     this->_transactionRepository.insert(customerId, transaction, dbTransaction).wait();
+        
+    //     currentBalance.amount = newBalance;
+
+    //     return Result<Balance>::success(currentBalance);
+    // }
 
     std::optional<AccountStatement> getAccountStatement(std::int32_t customerId) const
     {
@@ -71,5 +81,37 @@ private:
     std::int32_t getTransactionAmountWithSign(const Transaction &transaction) const
     {
         return transaction.amount * (transaction.type == "d" ? -1 : 1);
+    }
+
+    bool tryRegisterTransaction(std::int32_t customerId, const Transaction &transaction, Result<Balance> &result) const
+    {
+        auto currentBalanceOption = this->_balanceRepository.getByCustomerId(customerId);
+
+        if (!currentBalanceOption.has_value())
+        {
+            result = Result<Balance>::fail("BALANCE_NOT_FOUND", TransactionErrors::BALANCE_NOT_FOUND);
+            return true;
+        }
+
+        auto currentBalance = currentBalanceOption.value();
+        auto transactionAmount = this->getTransactionAmountWithSign(transaction);
+        std::int32_t newBalance = (currentBalance.amount + transactionAmount);
+
+        if ((newBalance + currentBalance.limit) < 0)
+        {
+            result = Result<Balance>::fail("INSUFFICIENT_FUNDS", TransactionErrors::INSUFFICIENT_FUNDS);
+            return true;
+        }
+
+        const auto isBalanceUpdated = this->_balanceRepository.update(customerId, currentBalance.amount, newBalance);
+        if(isBalanceUpdated)
+        {
+            this->_transactionRepository.insert(customerId, transaction);
+            currentBalance.amount = newBalance;
+            result = Result<Balance>::success(currentBalance);
+            return true;
+        }
+
+        return false;
     }
 };
